Entrega 2 Ajuste por deposito
