# src/main/resources/api.yaml
@@ -159,6 +159,91 @@ paths:
                 $ref: "#/components/schemas/Account"
         '400':
           description: Invalid data
+
+  /commission/{accountType}:
+    put:
+      summary: Withdraw amount from commission
+      operationId: commission
+      tags:
+        - commission
+      parameters:
+        - name: accountType
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/taxedTransactionLimit"
+      responses:
+        '200':
+          description: commission update
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/taxedTransactionLimit"
+        '400':
+          description: Invalid data
+
+  /commission:
+    post:
+      summary: Withdraw amount from commission
+      operationId: createCommission
+      tags:
+        - commission
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/taxedTransactionLimit"
+      responses:
+        '200':
+          description: commission created
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/taxedTransactionLimit"
+        '400':
+          description: Invalid data
+
+  /commission/findallcommission:
+    get:
+      summary: all commission
+      operationId: getCommission
+      tags:
+        - commission
+      responses:
+        '200':
+          description: List of accounts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/taxedTransactionLimit"
+
+  /commission/{id}:
+    delete:
+      summary: Delete an account
+      operationId: deleteCommission
+      tags:
+        - commission
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: commission deleted successfully
+        '404':
+          description: commission not found
+
 components:
   schemas:
     Account:
@@ -200,15 +285,36 @@ components:
           type: array
           items:
             type: string
+        limitTransaction:
+          type: number
+          format: double
+
     DepositRequest:
       type: object
       properties:
+        customerId:
+          type: string
         monto:
           type: number
           format: double
     WithdrawRequest:
       type: object
       properties:
+        monto:
+          type: number
+          format: double
+
+    taxedTransactionLimit:
+      type: object
+      properties:
+        id:
+          type: string
+        accountType:
+          type: string
+          enum:
+            - AHORRO
+            - CORRIENTE
+            - PLAZO_FIJO
         monto:
           type: number
           format: double
